# Fiera

binary_cnn/: CMakeLists.txt
binary_cnn/CNN/: Dataset.h  batch_norm_layer_new_t.h  batch_norm_layer_t.h  cnn.h  cnn_new.h  conv_layer_bin_t.h  conv_layer_new.h  conv_layer_new_t.h  conv_layer_t.h  cross_entropy_layer_t.h  data.h  fc_layer.h  fc_layer_new.h  flatten_t.h  gradient_t.h  layer_t.h  model.h  model_new.h  optimization_method.h  prelu_layer_new_t.h  scale_layer_new_t.h  softmax_layer_t.h  tensor.hpp  tensor_bin_t.h  types.h
binary_cnn/CNN/Dataset/: MNIST.h
binary_cnn/CNN/utils/: extras.hpp  im2col.hpp  im2col.hpp.gch
binary_cnn/Example MNIST/full_test/: Model.cpp  implementation_check_mnist_pytorch.cpp
binary_cnn/Example MNIST/full_test/trained_models/big_binary_mnist1/: model.json
binary_cnn/Example MNIST/full_test/trained_models/big_binary_mnist1/weights/: metadata.json
binary_cnn/Example MNIST/unit_tests/: batch_norm_backward.cpp  batch_norm_backward_xtensor.cpp  batch_norm_forward.cpp  batch_norm_forward_xtensor.cpp  bconv_backward.cpp  conv_backward_xtensor.cpp  conv_forward.cpp  conv_forward_xtensor.cpp  fc_backward_xtensor.cpp  fc_forward.cpp  fc_forward_xtensor.cpp  prelu_forward_xtensor.cpp  save_layer_weights.cpp  save_load_weights.cpp  xtensor_test.cpp
